Co-authored-by: George Giannakopoulos <ggianna@scify.org>

--- a/ga_inverse_testlib.ipynb
+++ b/ga_inverse_testlib.ipynb
@@ -66,16 +66,41 @@
     "boundaries_D = np.array([-12.8, -12.2])\n",
     "boundaries_R = np.array([1.9, 2.1])\n",
     "def ga_fitness(solution, solution_idx):\n",
-    "    # Build upon imported fi\n",
+    "    # Build upon default, imported fitness from library\n",
     "    return fitness_base(solution, solution_idx, diameter_tuple, mass_tuple, ascF_tuple, kD_tuple,\n",
-    "            boundaries_D, boundaries_R, model)\n",
+    "            boundaries_D, boundaries_R, model)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define single loop\n",
+    "def run_one_ga_loop():\n",
+    "    # Starting population\n",
+    "    starting_population = training_data\n",
     "\n",
-    "# Starting population\n",
-    "starting_population = training_data\n",
+    "    # Actual initialization\n",
+    "    ga_instance = prepareGA(fitness=ga_fitness, starting_population_data=starting_population,\n",
+    "                            num_generations=2)\n",
+    "    \n",
+    "    # Run GA\n",
+    "    solution, solution_fitness, solution_index = runGA(ga_instance)\n",
     "\n",
-    "# Actual initialization\n",
-    "ga_instance = prepareGA(fitness=ga_fitness, starting_population_data=starting_population,\n",
-    "                        num_generations=2)"
+    "    # Get best solutions\n",
+    "    best_solutions = get_best_solutions(ga_instance)\n",
+    "    print(best_solutions)\n",
+    "\n",
+    "\n",
+    "    # Output also best of the best\n",
+    "    best_solution, best_solution_fitness, best_solution_idx = ga_instance.best_solution()\n",
+    "\n",
+    "    print(\"Parameters of the best solution : %s\"%(str(best_solution)))\n",
+    "    print(\"Fitness value of the best solution = %5.3f\"%(best_solution_fitness))\n",
+    "\n",
+    "    return best_solutions"
    ]
   },
   {
