--- a/ga_inverse_testlib.ipynb
+++ b/ga_inverse_testlib.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,15 +54,33 @@
     "## Fitness function\n",
     "boundaries_D = np.array([-12.8, -12.2])\n",
     "boundaries_R = np.array([1.9, 2.1])\n",
+    "\n",
+    "# Custom fitness function\n",
+    "def my_fitness(estimated_gas1_diffusivity, estimated_gas2_diffusivity, result_details: dict = None):\n",
+    "    Ratio = estimated_gas1_diffusivity - estimated_gas2_diffusivity\n",
+    "    \n",
+    "    DiffusivityContribution = 1.0/(abs(np.min(boundaries_D) - estimated_gas1_diffusivity) + abs(np.max(boundaries_D) - estimated_gas1_diffusivity))\n",
+    "    RatiosContribution = 1.0/(abs(np.min(boundaries_R) - Ratio) + abs(np.max(boundaries_R) - Ratio))\n",
+    "\n",
+    "    # If a result_details dictionary exists\n",
+    "    if result_details is not None:\n",
+    "        # then update it the intermediate results\n",
+    "        result_details['Diffusivity'] = estimated_gas1_diffusivity\n",
+    "        result_details['Ratio'] = Ratio\n",
+    "    \n",
+    "    overallFitnessMeasure = 0.5*DiffusivityContribution + 0.5*RatiosContribution\n",
+    "\n",
+    "    return overallFitnessMeasure\n",
+    "\n",
     "def ga_fitness(solution, solution_idx):\n",
     "    # Build upon default, imported fitness from library\n",
     "    return fitness_base(solution, solution_idx, diameter_tuple, mass_tuple, ascF_tuple, kD_tuple,\n",
-    "            boundaries_D, boundaries_R, model)\n"
+    "            boundaries_D, boundaries_R, model, my_fitness)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +91,8 @@
     "\n",
     "    # Actual initialization\n",
     "    ga_instance = prepareGA(fitness=ga_fitness, starting_population_data=starting_population,\n",
-    "                            num_generations=2, on_generation=None)\n",
+    "                            num_generations=2, on_generation=None, suppress_warnings=True)\n",
+    "    \n",
     "    \n",
     "    # Run GA\n",
     "    solution, solution_fitness, solution_index = runGA(ga_instance)\n",
@@ -95,99 +114,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ggianna/runtimeEnvs/mambaforge/inverse-design/lib/python3.10/site-packages/pygad/pygad.py:932: UserWarning: Use the 'save_best_solutions' parameter with caution as it may cause memory overflow when either the number of generations or number of genes is large.\n",
-      "  if not self.suppress_warnings: warnings.warn(\"Use the 'save_best_solutions' parameter with caution as it may cause memory overflow when either the number of generations or number of genes is large.\")\n",
-      "/home/ggianna/runtimeEnvs/mambaforge/inverse-design/lib/python3.10/site-packages/pygad/pygad.py:940: UserWarning: Use the 'save_solutions' parameter with caution as it may cause memory overflow when either the number of generations, number of genes, or number of solutions in population is large.\n",
-      "  if not self.suppress_warnings: warnings.warn(\"Use the 'save_solutions' parameter with caution as it may cause memory overflow when either the number of generations, number of genes, or number of solutions in population is large.\")\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Current date and time : \n",
-      "2023-03-15 15:45:01\n",
-      "--- 0.07997106313705445 minutes ---\n",
-      "Current date and time : \n",
-      "2023-03-15 15:45:06\n",
-      "Parameters of the best solution : [30.     4.86   6.41   4.438  3.78   2.278  4.25 ]\n",
-      "Fitness value of the best solution = 3.0136815042992273\n",
-      "[[27.     6.41   6.41   6.41   3.78   3.78   3.78 ]\n",
-      " [30.     4.86   6.41   4.438  3.78   2.278  4.25 ]]\n",
-      "Parameters of the best solution : [30.     4.86   6.41   4.438  3.78   2.278  4.25 ]\n",
-      "Fitness value of the best solution = 3.014\n",
-      "Loop time: 0.080301s\n",
-      "Avg. loop time: 0.026767s\n",
-      "Current date and time : \n",
-      "2023-03-15 15:45:06\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ggianna/runtimeEnvs/mambaforge/inverse-design/lib/python3.10/site-packages/pygad/pygad.py:932: UserWarning: Use the 'save_best_solutions' parameter with caution as it may cause memory overflow when either the number of generations or number of genes is large.\n",
-      "  if not self.suppress_warnings: warnings.warn(\"Use the 'save_best_solutions' parameter with caution as it may cause memory overflow when either the number of generations or number of genes is large.\")\n",
-      "/home/ggianna/runtimeEnvs/mambaforge/inverse-design/lib/python3.10/site-packages/pygad/pygad.py:940: UserWarning: Use the 'save_solutions' parameter with caution as it may cause memory overflow when either the number of generations, number of genes, or number of solutions in population is large.\n",
-      "  if not self.suppress_warnings: warnings.warn(\"Use the 'save_solutions' parameter with caution as it may cause memory overflow when either the number of generations, number of genes, or number of solutions in population is large.\")\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- 0.07879554828008016 minutes ---\n",
-      "Current date and time : \n",
-      "2023-03-15 15:45:11\n",
-      "Parameters of the best solution : [29.    6.01  6.41  4.86  3.78  3.54  3.85]\n",
-      "Fitness value of the best solution = 3.0547845041956316\n",
-      "[[27.     6.41   6.41   6.41   3.78   3.78   3.78 ]\n",
-      " [29.     6.41   4.438  4.86   3.78   3.54   3.85 ]\n",
-      " [29.     6.01   6.41   4.86   3.78   3.54   3.85 ]]\n",
-      "Parameters of the best solution : [29.    6.01  6.41  4.86  3.78  3.54  3.85]\n",
-      "Fitness value of the best solution = 3.055\n",
-      "Loop time: 0.079067s\n",
-      "Avg. loop time: 0.053123s\n",
-      "Current date and time : \n",
-      "2023-03-15 15:45:11\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ggianna/runtimeEnvs/mambaforge/inverse-design/lib/python3.10/site-packages/pygad/pygad.py:932: UserWarning: Use the 'save_best_solutions' parameter with caution as it may cause memory overflow when either the number of generations or number of genes is large.\n",
-      "  if not self.suppress_warnings: warnings.warn(\"Use the 'save_best_solutions' parameter with caution as it may cause memory overflow when either the number of generations or number of genes is large.\")\n",
-      "/home/ggianna/runtimeEnvs/mambaforge/inverse-design/lib/python3.10/site-packages/pygad/pygad.py:940: UserWarning: Use the 'save_solutions' parameter with caution as it may cause memory overflow when either the number of generations, number of genes, or number of solutions in population is large.\n",
-      "  if not self.suppress_warnings: warnings.warn(\"Use the 'save_solutions' parameter with caution as it may cause memory overflow when either the number of generations, number of genes, or number of solutions in population is large.\")\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- 0.07888078689575195 minutes ---\n",
-      "Current date and time : \n",
-      "2023-03-15 15:45:15\n",
-      "Parameters of the best solution : [27.     6.01   5.7    4.438  3.78   4.093  4.25 ]\n",
-      "Fitness value of the best solution = 3.333333333333329\n",
-      "[[27.     6.41   6.41   6.41   3.78   3.78   3.78 ]\n",
-      " [27.     6.41   6.01   4.438  3.78   3.85   3.54 ]\n",
-      " [27.     6.01   5.7    4.438  3.78   4.093  4.25 ]]\n",
-      "Parameters of the best solution : [27.     6.01   5.7    4.438  3.78   4.093  4.25 ]\n",
-      "Fitness value of the best solution = 3.333\n",
-      "Loop time: 0.079110s\n",
-      "Avg. loop time: 0.079493s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Rounds = 3\n",
     "loop_time = 0\n",
@@ -222,31 +151,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Parameters of the best solution : [27.    4.86  5.7   3.66  3.78  3.54  4.25]\n",
-      "Parameters of the best solution : [27.     6.41   5.7    4.438  3.78   4.093  3.54 ]\n",
-      "Parameters of the best solution : [27.    6.41  6.41  6.41  3.78  3.78  3.78]\n",
-      "Parameters of the best solution : [30.     4.86   3.66   4.438  3.927  3.85   3.54 ]\n",
-      "Parameters of the best solution : [30.    6.41  6.01  4.86  3.78  3.54  3.85]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Output best solutions\n",
     "for best_solution in best_solutions_list:\n",
     "    print(\"Parameters of the best solution : %s\"%(str(best_solution)))\n",
-    "    \n"
+    "\n",
+    "# Initialize a dataframe\n",
+    "best_zifs_for_plot = pd.DataFrame(columns = [\n",
+    "        'MOF_ID',\n",
+    "        'logD',\n",
+    "        'Ratio', 'fitness'])\n",
+    "\n",
+    "def add_to_best_zifs_list(idx, estimated_gas1_diffusivity, estimated_gas2_diffusivity):\n",
+    "    best_zifs_for_plot.loc[idx, ['MOF_ID']] = idx\n",
+    "    fitness_details = dict()\n",
+    "    best_zifs_for_plot.loc[idx, ['fitness']] = my_fitness(estimated_gas1_diffusivity, estimated_gas2_diffusivity, fitness_details)\n",
+    "    best_zifs_for_plot.loc[idx, ['logD']] = fitness_details['Diffusivity']\n",
+    "    best_zifs_for_plot.loc[idx, ['Ratio']] = fitness_details['Ratio']\n",
+    "\n",
+    "    return None\n",
+    "\n",
+    "\n",
+    "# For each solution\n",
+    "for mof_id, solution_vector in enumerate(best_solutions_list):\n",
+    "    # Calculate the 2 components of the fitness \n",
+    "    # and add them to the data frame\n",
+    "    fitness_base(solution_vector, mof_id, diameter_tuple, mass_tuple, ascF_tuple, kD_tuple, boundaries_D, boundaries_R, model,\n",
+    "                 customFitnessFormula = lambda estimated_gas1_diffusivity, estimated_gas2_diffusivity: \n",
+    "                    add_to_best_zifs_list(mof_id, estimated_gas1_diffusivity, estimated_gas2_diffusivity)\n",
+    "                 )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot outputs\n",
+    "plot_logDvsRatio(best_zifs_for_plot,'C3H6', 'C3H8')\n",
+    "plot_fitnessPerMOF(best_zifs_for_plot,'C3H6', 'C3H8')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
