--- a/ga_inverse_testlib.ipynb
+++ b/ga_inverse_testlib.ipynb
@@ -17,10 +17,7 @@
    "outputs": [],
    "source": [
     "# Initialize gas constants (C3H6, C3H8)\n",
-    "diameter_tuple = (np.array([4.03]), np.array([4.16]))\n",
-    "mass_tuple = (np.array([42.08]), np.array([44.1]))\n",
-    "ascF_tuple = (np.array([0.142]), np.array([0.152]))\n",
-    "kD_tuple = (np.array([4.5]), np.array([4.3]))"
+    "\n"
    ]
   },
   {
@@ -30,7 +27,7 @@
    "outputs": [],
    "source": [
     "# Read data\n",
-    "data_from_file = readData('./MyData.xlsx')\n",
+    "data_from_file = readData('./TrainData.xlsx')\n",
     "training_data, gene_repr_of_training_data, training_x, training_y = prepareDataForLearning(data_from_file)\n"
    ]
   },
@@ -42,6 +39,15 @@
    "source": [
     "# Train model\n",
     "model = trainModel(training_x, training_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diameter_tuple, mass_tuple, ascF_tuple, kD_tuple = case('propylene')"
    ]
   },
   {
@@ -91,6 +97,15 @@
     "\n",
     "    # Actual initialization\n",
     "    ga_instance = prepareGA(fitness=ga_fitness, starting_population_data=starting_population,\n",
+    "                            gene_space =  [\n",
+    "                                [ 4,12,25,27,29,30,48],\n",
+    "                                [ 4.438, 4.86, 5.7, 6.01, 6.41],\n",
+    "                                [ 4.438, 4.86, 5.7, 6.01, 6.41],\n",
+    "                                [ 4.438, 4.86, 5.7,5.996,6.01, 6.41],\n",
+    "                                [ 3.54, 3.78, 3.85,  4.093],\n",
+    "                                [ 3.54, 3.78, 3.85,  4.093],\n",
+    "                                [2.278, 2.7, 3.54, 3.78, 3.85,  4.093, 4.25],\n",
+    "                            ],\n",
     "                            num_generations=2, on_generation=None, suppress_warnings=True)\n",
     "    \n",
     "    \n",
