--- a/ga_inverse_testlib.ipynb
+++ b/ga_inverse_testlib.ipynb
@@ -6,6 +6,104 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "diameter_tuple, mass_tuple, ascF_tuple, kD_tuple, linker_length1, func1_length, MetalNum, GeneFieldNames, gene_space = case('propylene')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read data\n",
+    "data_from_file = readData('./TrainData.xlsx')\n",
+    "training_data, gene_repr_of_training_data, training_x, training_y = prepareDataForLearning(data_from_file, GeneFieldNames)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train model\n",
+    "model = train_model(training_x, training_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prepare GA\n",
+    "## Fitness function\n",
+    "boundaries_D = np.array([-12.8, -12.2])\n",
+    "boundaries_R = np.array([1.9, 2.1])\n",
+    "\n",
+    "# Custom fitness function\n",
+    "def my_fitness(estimated_gas1_diffusivity, estimated_gas2_diffusivity, result_details: dict = None):\n",
+    "    Ratio = estimated_gas1_diffusivity - estimated_gas2_diffusivity\n",
+    "    \n",
+    "    DiffusivityContribution = 1.0/(abs(np.min(boundaries_D) - estimated_gas1_diffusivity) + abs(np.max(boundaries_D) - estimated_gas1_diffusivity))\n",
+    "    RatiosContribution = 1.0/(abs(np.min(boundaries_R) - Ratio) + abs(np.max(boundaries_R) - Ratio))\n",
+    "\n",
+    "    # If a result_details dictionary exists\n",
+    "    if result_details is not None:\n",
+    "        # then update it the intermediate results\n",
+    "        result_details['Diffusivity'] = estimated_gas1_diffusivity\n",
+    "        result_details['Ratio'] = Ratio\n",
+    "    \n",
+    "    overallFitnessMeasure = 0.5*DiffusivityContribution + 0.5*RatiosContribution\n",
+    "\n",
+    "    return overallFitnessMeasure\n",
+    "\n",
+    "def ga_fitness(solution, solution_idx):\n",
+    "    # Build upon default, imported fitness from library\n",
+    "    return fitness_base(solution, solution_idx, diameter_tuple, mass_tuple, ascF_tuple, kD_tuple,GeneFieldNames, \n",
+    "                        boundaries_D, boundaries_R, model, my_fitness)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define single loop\n",
+    "def run_one_ga_loop():\n",
+    "    # Starting population\n",
+    "    starting_population = training_data\n",
+    "\n",
+    "    # Actual initialization\n",
+    "    ga_instance = prepareGA(fitness=ga_fitness, starting_population_data=starting_population,\n",
+    "                            gene_space =  gene_space,\n",
+    "                            num_generations=2, on_generation=None, suppress_warnings=True)\n",
+    "        \n",
+    "    # Run GA\n",
+    "    runGA(ga_instance)\n",
+    "\n",
+    "    # Get best solutions\n",
+    "    best_solutions = get_best_solutions(ga_instance)\n",
+    "    print(\"Best solutions of loop:\")\n",
+    "    print(best_solutions)\n",
+    "\n",
+    "\n",
+    "    # Output also best of the best\n",
+    "    best_solution, best_solution_fitness, _ = ga_instance.best_solution()\n",
+    "\n",
+    "    print(\"Parameters of the best loop solution : %s\"%(str(best_solution)))\n",
+    "    print(\"Fitness value of the best loop solution = %5.3f\"%(best_solution_fitness))\n",
+    "\n",
+    "    return best_solutions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Import library\n",
     "from ga_inverse import *"
    ]
@@ -17,10 +115,7 @@
    "outputs": [],
    "source": [
     "# Initialize gas constants (C3H6, C3H8)\n",
-    "diameter_tuple = (np.array([4.03]), np.array([4.16]))\n",
-    "mass_tuple = (np.array([42.08]), np.array([44.1]))\n",
-    "ascF_tuple = (np.array([0.142]), np.array([0.152]))\n",
-    "kD_tuple = (np.array([4.5]), np.array([4.3]))"
+    "\n"
    ]
   },
   {
@@ -30,18 +125,8 @@
    "outputs": [],
    "source": [
     "# Read data\n",
-    "data_from_file = readData('./MyData.xlsx')\n",
+    "data_from_file = readData('./TrainData.xlsx')\n",
     "training_data, gene_repr_of_training_data, training_x, training_y = prepareDataForLearning(data_from_file)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Train model\n",
-    "model = trainModel(training_x, training_y)"
    ]
   },
   {
@@ -91,6 +176,15 @@
     "\n",
     "    # Actual initialization\n",
     "    ga_instance = prepareGA(fitness=ga_fitness, starting_population_data=starting_population,\n",
+    "                            gene_space =  [\n",
+    "                                [ 4,12,25,27,29,30,48],\n",
+    "                                [ 4.438, 4.86, 5.7, 6.01, 6.41],\n",
+    "                                [ 4.438, 4.86, 5.7, 6.01, 6.41],\n",
+    "                                [ 4.438, 4.86, 5.7,5.996,6.01, 6.41],\n",
+    "                                [ 3.54, 3.78, 3.85,  4.093],\n",
+    "                                [ 3.54, 3.78, 3.85,  4.093],\n",
+    "                                [2.278, 2.7, 3.54, 3.78, 3.85,  4.093, 4.25],\n",
+    "                            ],\n",
     "                            num_generations=2, on_generation=None, suppress_warnings=True)\n",
     "    \n",
     "    \n",
