--- a/ga_inverse_testlib.ipynb
+++ b/ga_inverse_testlib.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_case = 'propylene' # You may also choose 'o2' or 'co2'\n",
-    "diameter_tuple, mass_tuple, ascF_tuple, kD_tuple, linker_length1, func1_length, MetalNum, GeneFieldNames, gene_space = case(selected_case)"
+    "selected_case = 'co2' # You can choose among 'propylene', 'o2' and 'co2', which correspond to propylene/propane, o2/n2 and co2/ch4 mixtures, respectively\n",
+    "diameter_tuple, mass_tuple, ascF_tuple, kD_tuple, linker_length1, func1_length, MetalNum, linker_length3, func3_length, GeneFieldNames, gene_space = case(selected_case)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,27 +43,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Prepare GA\n",
     "## Fitness function\n",
-    "boundaries_D = np.array([-12.8, -12.2])\n",
-    "boundaries_R = np.array([1.9, 2.1])\n",
+    "boundaries_D = np.array([-9, -10])\n",
+    "boundaries_R = np.array([4, 5])\n",
     "\n",
     "# Custom fitness function\n",
     "def my_fitness(estimated_gas1_diffusivity, estimated_gas2_diffusivity, result_details: dict = None):\n",
     "    Ratio = estimated_gas1_diffusivity - estimated_gas2_diffusivity\n",
     "    \n",
-    "    DiffusivityContribution = 1.0/(abs(np.min(boundaries_D) - estimated_gas1_diffusivity) + abs(np.max(boundaries_D) - estimated_gas1_diffusivity))\n",
-    "    RatiosContribution = 1.0/(abs(np.min(boundaries_R) - Ratio) + abs(np.max(boundaries_R) - Ratio))\n",
+    "    # DiffusivityContribution = 1.0/(abs(np.min(boundaries_D) - estimated_gas1_diffusivity) + abs(np.max(boundaries_D) - estimated_gas1_diffusivity))\n",
+    "    # RatiosContribution = 1.0/(abs(np.min(boundaries_R) - Ratio) + abs(np.max(boundaries_R) - Ratio))\n",
     "\n",
     "    # If a result_details dictionary exists\n",
     "    if result_details is not None:\n",
     "        # then update it the intermediate results\n",
     "        result_details['Diffusivity'] = estimated_gas1_diffusivity\n",
     "        result_details['Ratio'] = Ratio\n",
+    "        if  (np.min(boundaries_D) < estimated_gas1_diffusivity < np.max(boundaries_D)) and (np.min(boundaries_R) < Ratio < np.max(boundaries_R)):\n",
+    "            DiffusivityContribution = 1.0/(abs(np.min(boundaries_D) - estimated_gas1_diffusivity) + abs(np.max(boundaries_D) - estimated_gas1_diffusivity))\n",
+    "            RatiosContribution = 1.0/(abs(np.min(boundaries_R) - Ratio) + abs(np.max(boundaries_R) - Ratio))\n",
+    "        else:\n",
+    "            RatiosContribution = 1/(np.exp(abs(Ratio-np.min(boundaries_R)))+np.exp(abs(Ratio-np.max(boundaries_R))))\n",
+    "            DiffusivityContribution = 1/(np.exp(abs(estimated_gas1_diffusivity-np.min(boundaries_D)))+np.exp(abs(estimated_gas1_diffusivity-np.max(boundaries_D))))\n",
     "    \n",
     "    overallFitnessMeasure = 0.5*DiffusivityContribution + 0.5*RatiosContribution\n",
     "\n",
@@ -77,14 +83,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define single loop\n",
     "def run_one_ga_loop():\n",
     "    # Starting population\n",
-    "    starting_population = training_data\n",
+    "    starting_population = gene_repr_of_training_data\n",
     "\n",
     "    # Actual initialization\n",
     "    ga_instance = prepareGA(fitness=ga_fitness, starting_population_data=starting_population,\n",
@@ -111,9 +117,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_19844\\3488398686.py\u001b[0m in \u001b[0;36m<cell line: 8>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[0mstart_time\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m     \u001b[0mbest_solutions_of_loop\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrun_one_ga_loop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[1;31m# Append to all solutions set\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_19844\\4124569209.py\u001b[0m in \u001b[0;36mrun_one_ga_loop\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[1;31m# Actual initialization\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m     ga_instance = prepareGA(fitness=ga_fitness, starting_population_data=starting_population,\n\u001b[0m\u001b[0;32m      8\u001b[0m                             \u001b[0mgene_space\u001b[0m \u001b[1;33m=\u001b[0m  \u001b[0mgene_space\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m                             num_generations=2, on_generation=None, suppress_warnings=True)\n",
+      "\u001b[1;32mc:\\Users\\pkrok\\OneDrive\\Python\\3_Inverse\\ga_inverse.py\u001b[0m in \u001b[0;36mprepareGA\u001b[1;34m(fitness, starting_population_data, suppress_warnings, **kwargs)\u001b[0m\n\u001b[0;32m    353\u001b[0m     \u001b[0mGenes\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0masanyarray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstarting_population_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mgene_field_names\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    354\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 355\u001b[1;33m     \u001b[0minitial_population\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mGenes\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    356\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    357\u001b[0m     \u001b[1;31m# narrowed down options\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices"
+     ]
+    }
+   ],
    "source": [
     "Rounds = 3\n",
     "loop_time = 0\n",
@@ -233,10 +253,29 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.13"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "4ffebdd25d21889109a1367ee45445830c00399d8ea08196f3e5d4bbcc58e8eb"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
