updated gitignore and ga_inverse_testlib.ipynb

--- a/ga_inverse_testlib.ipynb
+++ b/ga_inverse_testlib.ipynb
@@ -240,9 +240,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "inverse-design",
+   "display_name": "base",
    "language": "python",
-   "name": "inverse-design"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -254,14 +254,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.13"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "4ffebdd25d21889109a1367ee45445830c00399d8ea08196f3e5d4bbcc58e8eb"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
